<resources>
    <string name="app_name">resurreccion_exer4_SlamBook</string>

    <string name="hello">Hello</string>

    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="nickname">Nickname</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="what_is_your_mobile_number">What is your mobile number?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="what_is_your_favorite_color">What is your favorite color?</string>
    <string name="enter_favorite_color">Enter Favorite Color</string>
    <string name="what_is_your_course">What is your course?</string>
    <string name="enter_course">Enter Course</string>
    <string name="what_is_your_ultimate_dream">What is your ultimate dream?</string>
    <string name="enter_dream">Enter Dream</string>
    <string name="who_is_your_secret_crush">Who is your secret crush?</string>
    <string name="enter_name_of_crush">Enter Name of Crush</string>
    <string name="what_is_your_message_for_me">What is your message for me?</string>

    <string name="done">Done</string>
    <string name="thanks_for_answering">Thanks for answering!</string>
</resources>
