<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        tools:context=".MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/hello_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/name_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_name" />

                <TextView
                    android:id="@+id/nickname_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/nickname_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_nickname" />

                <TextView
                    android:id="@+id/age_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/age_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_age"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/birthday_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when_is_your_birthday" />

                <EditText
                    android:id="@+id/birthday_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_birthday" />

                <TextView
                    android:id="@+id/phone_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/phone_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/color_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_favorite_color" />

                <EditText
                    android:id="@+id/color_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_favorite_color"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/course_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_course" />

                <EditText
                    android:id="@+id/course_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_course" />

                <TextView
                    android:id="@+id/dream_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_ultimate_dream" />

                <EditText
                    android:id="@+id/dream_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_dream" />

                <TextView
                    android:id="@+id/crush_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/who_is_your_secret_crush" />

                <EditText
                    android:id="@+id/crush_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_name_of_crush" />

                <TextView
                    android:id="@+id/message_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_message_for_me" />

                <EditText
                    android:id="@+id/editText10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

<!--    <data>-->
<!--        <variable-->
<!--            name="entry"-->
<!--            type="com.example.resurreccion_exer4_slambook.Entry">-->
<!--    </data>-->

</layout>